fix link issue for glass component

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <h1 class="glow">WHY CHOOSE <br><strong>
               <H1 style="font-weight: 900; font-size: 75px;">E-NSTRUMENTS?</H1>
             </strong></h1>
-          <img class="eclipse" src="../images/drumset/Eclipse.png" />
-          <img class="eclipse2" src="../images/drumset/Eclipse2.png" />
+          <img class="eclipse" src="./images/drumset/Eclipse.png" />
+          <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
           <div class="feature-box col-lg-4 col-md-12 col-sm-12">
             <img src="images/4.png">
             <h3><br>Easy to use.</h3>
