change carousel images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="features">
         <div class="row glass">
           <h1 class="glow">WHY CHOOSE <br><strong>
-              <H1 style="font-weight: 900; font-size: 75px;">E-NSTRUMENTS?</H1>
+              <H1 class="big">E-NSTRUMENTS?</H1>
             </strong></h1>
           <img class="eclipse" src="./images/drumset/Eclipse.png" />
           <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
@@ -182,29 +182,19 @@
       <input type="radio" name="slider" id="item-5">
       <div class="cards">
         <label class="card" for="item-1" id="song-1">
-          <img
-            src="https://images.unsplash.com/photo-1530651788726-1dbf58eeef1f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=882&q=80"
-            alt="song">
+          <img src="./images/carousel/guitar.jpg" alt="song">
         </label>
         <label class="card" for="item-2" id="song-2">
-          <img
-            src="https://images.unsplash.com/photo-1559386484-97dfc0e15539?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80"
-            alt="song">
+          <img src="./images/carousel/drums.jpg" alt="song">
         </label>
         <label class="card" for="item-3" id="song-3">
-          <img
-            src="https://images.unsplash.com/photo-1533461502717-83546f485d24?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60"
-            alt="song">
+          <img src="./images/carousel/piano.jpg" alt="song">
         </label>
         <label class="card" for="item-4" id="song-4">
-          <img
-            src="https://images.unsplash.com/photo-1526309789204-a67df3fd3c4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80"
-            alt="song">
+          <img src="./images/carousel/xylophone.jpg" alt="song">
         </label>
         <label class="card" for="item-5" id="song-5">
-          <img
-            src="https://images.unsplash.com/photo-1544586784-b9ee32edb3ff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
-            alt="song">
+          <img src="./images/carousel/pan-flute.jpeg" alt="song">
       </div>
       <div class="player">
         <div class="upper-part">
