--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <div class="main">
       <!-- Nav Bar -->
       <div class="navi">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
           <div class="container-fluid">
-            <img class="logo" style="background-color: #7b2943; width: 60px; height: 60px;" src="images/logo.png">
+            <img class="logo" style="background-color: #141129; width: 60px; height: 60px;" src="images/logo.png">
             <a class="navbar-brand" href="#">E-nstruments</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
@@ -199,7 +199,7 @@
       <div class="player">
         <div class="upper-part">
           <div class="play-icon">
-            <svg width="20" height="20" fill="#2992dc" stroke="#2992dc" stroke-linecap="round" stroke-linejoin="round"
+            <svg width="20" height="20" fill="#fff" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"
               stroke-width="2" class="feather feather-play" viewBox="0 0 24 24">
               <defs />
               <path d="M5 3l14 9-14 9V3z" />
@@ -207,44 +207,36 @@
           </div>
           <div class="info-area" id="test">
             <label class="song-info" id="song-info-1">
-              <div class="title">Bunker</div>
+              <div class="title"><a class="title" href="./instruments/guitar.html">Guitar</a></div>
               <div class="sub-line">
-                <div class="subtitle">Balthazar</div>
-                <div class="time">4.05</div>
+                <div class="subtitle">Set of 6 + 4 keys (strings + chords)</div>
               </div>
             </label>
             <label class="song-info" id="song-info-2">
-              <div class="title">Words Remain</div>
+              <div class="title"><a class="title" href="./instruments/drum.html">Drumset</a></div>
               <div class="sub-line">
-                <div class="subtitle">Moderator</div>
-                <div class="time">4.05</div>
+                <div class="subtitle">Set of 11 different keys</div>
               </div>
             </label>
             <label class="song-info" id="song-info-3">
-              <div class="title">Falling Out</div>
+              <div class="title"><a class="title" href="./instruments/piano.html">Piano</a></div>
               <div class="sub-line">
-                <div class="subtitle">Otzeki</div>
-                <div class="time">4.05</div>
+                <div class="subtitle">Set of 36 different keys</div>
               </div>
             </label>
             <label class="song-info" id="song-info-4">
-              <div class="title">Song title 4</div>
+              <div class="title"><a class="title" href="./instruments/xylophone.html">Xylophone</a></div>
               <div class="sub-line">
-                <div class="subtitle">Artist 4</div>
-                <div class="time">2.00</div>
+                <div class="subtitle">Set of 13 different keys</div>
               </div>
             </label>
             <label class="song-info" id="song-info-5">
-              <div class="title">Song title 5</div>
+              <div class="title"><a class="title" href="./instruments/pan-flute.html">Pan-Flute</a></div>
               <div class="sub-line">
-                <div class="subtitle">Artist 5</div>
-                <div class="time">2.10</div>
+                <div class="subtitle">Set of 15 different keys</div>
               </div>
             </label>
           </div>
-        </div>
-        <div class="progress-bar">
-          <span class="progress"></span>
         </div>
       </div>
     </div>
@@ -253,9 +245,11 @@
 </body>
 
 <footer>
-  <h6 class="footer">Designed by YS7<br><br>built by MJ10</h6>
+  <hr style="width: 1px;text-decoration: dotted;background-color: white;">
+  <h6 class="footer">built by <a class="title" href="https://github.com/ManasJhaMJ">MJ10</a><br><br>Designed by <a
+      href="">YS7</a></h6>
 </footer>
 
-<script src="./index.js" charset="utf-8"></script>
+<!-- <script src="./index.js" charset="utf-8"></script> -->
 
 </html>
