--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="splash elementToFadeInAndOut">
     <!-- <h1 class="splash-text">E-NSTRUMENTS</h1> -->
-    <img class="splash-img" src="./images/graffiti1.png">
+    <img class="splash-img" src="./images/graffiti.png">
   </div>
 
   <section id="head">
