--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                       <p><a href="./instruments/guitar.html">Guitar</a></p>
                       <p><a href="./instruments/drum.html">Drum</a></p>
                       <p><a href="./instruments/piano.html">Piano</a></p>
-                      <p><a href="./instruments/bongo.html">Bongo</a></p>
                       <p><a href="./instruments/pan-flute.html">Pan-Flute</a></p>
                       <p><a href="./instruments/xylophone.html">Xylophone</a></p>
                       <p>More Coming Soon!</p>
@@ -109,6 +108,7 @@
         </div>
       </div>
     </div>
+    <hr>
 
   </section>
 
@@ -174,6 +174,7 @@
 
   </section> -->
   <section id="selection">
+    <h1 class="big glow" style="text-align: center; padding-bottom: 20px ; padding-top: 5px;">Instruments</h1>
     <div class="container">
       <input type="radio" name="slider" id="item-1" checked>
       <input type="radio" name="slider" id="item-2">
@@ -247,7 +248,7 @@
 <footer>
   <hr>
   <h6 class="footer">built by <a class="title" href="https://github.com/ManasJhaMJ">MJ10</a><br><br>Designed by <a
-      href="">YS7</a></h6>
+      href="https://github.com/YS7Creates">YS7</a></h6>
 </footer>
 
 <!-- <script src="./index.js" charset="utf-8"></script> -->
