--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -29,9 +29,9 @@
         <div class="main">
             <!-- Nav Bar -->
             <div class="navi">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
+                <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
                     <div class="container-fluid">
-                        <img class="logo" style="background-color: #AE3A5E; width: 60px; height: 60px;"
+                        <img class="logo" style="background-color: #141129 ; width: 60px; height: 60px;"
                             src="../images/logo.png">
                         <a class="navbar-brand" href="../index.html">E-nstruments</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,7 +51,6 @@
                                             <p><a href="../instruments/guitar.html">Guitar</a></p>
                                             <p><a href="../instruments/drum.html">Drum</a></p>
                                             <p><a href="../instruments/piano.html">Piano</a></p>
-                                            <p><a href="../instruments/bongo.html">Bongo</a></p>
                                             <p><a href="../instruments/pan-flute.html">Pan-Flute</a></p>
                                             <p><a href="../instruments/xylophone.html">Xylophone</a></p>
                                             <p>More Coming Soon!</p>
@@ -76,7 +75,7 @@
         <div class="play">
             <h1>
                 Play <strong>Guitar</strong> On
-                <strong style="color: #ae3a5e">E-nstruments</strong>!
+                <strong>E-nstruments</strong>!
             </h1>
             <div class="position-relative glass">
                 <img class="responsive-img" src="../images/guitar/fretboard1.png" alt="drum-set" />
@@ -127,7 +126,9 @@
 <script src="./instrument-js/guitar.js" charset="utf-8"></script>
 
 <footer>
-    <h6 class="footer">Designed by YS7<br /><br />built by MJ10</h6>
+    <hr>
+    <h6 class="footer">built by <a class="title" href="https://github.com/ManasJhaMJ">MJ10</a><br><br>Designed by <a
+            href="https://github.com/YS7Creates">YS7</a></h6>
 </footer>
 
 </html>
