Change Font Style

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   </section> -->
   <section id="selection">
-    <h1 class="big glow" style="text-align: center; padding-bottom: 20px ; padding-top: 5px;">Instruments</h1>
+    <h1 class="big glow" style="text-align: center; padding-bottom: 20px ; padding-top: 5px;">INSTRUMENTS</h1>
     <div class="container">
       <input type="radio" name="slider" id="item-1" checked>
       <input type="radio" name="slider" id="item-2">
