--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Ubuntu:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Kenia&family=Langar&family=Montserrat:wght@100;400;900&family=Outfit:wght@400;900&family=Sofadi+One&display=swap"
     rel="stylesheet">
 
   <!-- CSS -->
   <link href="./css/styles.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -74,7 +75,7 @@
         </nav>
       </div>
 
-      <img class="hero" src="images/main-dark.png" alt="pic">
+      <img class="hero" src="./images/main-dark.png" alt="pic">
 
     </div>
   </section>
@@ -183,19 +184,19 @@
       <input type="radio" name="slider" id="item-5">
       <div class="cards">
         <label class="card" for="item-1" id="song-1">
-          <img src="./images/carousel/guitar.jpg" alt="song">
+          <img class="images" src="./images/carousel/guitar.jpg" alt="song">
         </label>
         <label class="card" for="item-2" id="song-2">
-          <img src="./images/carousel/drums.jpg" alt="song">
+          <img class="images" src="./images/carousel/drums.jpg" alt="song">
         </label>
         <label class="card" for="item-3" id="song-3">
-          <img src="./images/carousel/piano.jpg" alt="song">
+          <img class="images" src="./images/carousel/piano.jpg" alt="song">
         </label>
         <label class="card" for="item-4" id="song-4">
-          <img src="./images/carousel/xylophone.jpg" alt="song">
+          <img class="images" src="./images/carousel/xylophone.jpg" alt="song">
         </label>
         <label class="card" for="item-5" id="song-5">
-          <img src="./images/carousel/pan-flute.jpeg" alt="song">
+          <img class="images" src="./images/carousel/pan-flute.jpeg" alt="song">
       </div>
       <div class="player">
         <div class="upper-part">
