--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<head>
+<head Cross-Origin-Resource-Policy: cross-origin>
   <title>E-nstruments</title>
 
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -13,11 +13,19 @@
     crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Kenia&family=Langar&family=Montserrat:wght@100;400;900&family=Outfit:wght@400;900&family=Sofadi+One&display=swap"
     rel="stylesheet">
+
+  <link href="https://db.onlinewebfonts.com/c/c069e8e801b8222372b276c6310249c2?family=Gyahegi-PersonalUse"
+    rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/893fdce7fe8ecb381f012ce2edd2dd6c?family=against-Regular" rel="stylesheet">
+
+  <!-- Jquery -->
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- CSS -->
   <link href="./css/styles.css" rel="stylesheet">
@@ -86,7 +94,7 @@
 
       <div class="features">
         <div class="row glass">
-          <h1 class="glow">WHY CHOOSE <br><strong>
+          <h1 class="glow" style="font-family:'Gyahegi-PersonalUse';">WHY CHOOSE <br><strong>
               <H1 class="big">E-NSTRUMENTS?</H1>
             </strong></h1>
           <img class="eclipse" src="./images/drumset/Eclipse.png" />
