Create Contact us page

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                   <div class="dropdown">
                     <span>Instruments</span>
                     <div class="dropdown-content">
-                      <p><a href="./instruments/guitar.html">Guitar</a></p>
                       <p><a href="./instruments/drum.html">Drum</a></p>
+                      <p><a href="./instruments/guitar.html">Guitar</a></p>
                       <p><a href="./instruments/piano.html">Piano</a></p>
                       <p><a href="./instruments/pan-flute.html">Pan-Flute</a></p>
                       <p><a href="./instruments/xylophone.html">Xylophone</a></p>
@@ -75,7 +75,7 @@
                   <a class="nav-link" href="#">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link" href="./contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
