Create FAQ page

--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- CSS -->
-    <link href="./css/contact.css" rel="stylesheet">
+    <link href="./css/faq.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +48,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <div class="collapse collapse1 navbar-collapse" id="navbarTogglerDemo02">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link" href="./index.html">Home</a>
@@ -67,7 +67,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./faq.html">FAQ</a>
+                                    <a class="nav-link" href="#">FAQ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./contact.html">Contact Us</a>
@@ -79,47 +79,72 @@
             </div>
         </div>
     </section>
+    <section id="faq">
+        <div id="faq">
+            <h1 class="big">F<strong class="small">requently</strong>
+                A<strong class="small">sked</strong>
+                Q<strong class="small">uestions</strong>
+            </h1>
 
-    <section id="contact">
-        <div class="contact">
-            <h1 class="big">Contact Us</h1>
-            <div class="row">
-                <div class="col-sm-6 mb-3 mb-sm-0 card1">
-                    <div class="card">
-                        <div class="card-body glass">
-                            <img class="eclipse" src="./images/drumset/Eclipse.png" />
-                            <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
-                            <h5 class="card-title">Manas Jha</h5>
-                            <p class="card-text">Developer</p>
-                            <a href=""><img class="icon" src="./images/contact/github.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/linkedin.png"></a>
-                            <br>
-                            <a href=""><img class="icon" src="./images/contact/twitter.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/instagram.png"></a>
-                            <br><br><a href="#" class="btn btn-primary">Mail Me!</a>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse collapse2 show"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 card2">
-                    <div class="card">
-                        <div class="card-body glass">
-                            <img class="eclipse" src="./images/drumset/Eclipse.png" />
-                            <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
-                            <h5 class="card-title">Yash Srivastava</h5>
-                            <p class="card-text">Designer</p>
-                            <a href=""><img class="icon" src="./images/contact/github.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/linkedin.png"></a>
-                            <br>
-                            <a href=""><img class="icon" src="./images/contact/twitter.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/instagram.png"></a>
-                            <br><br><a href="#" class="btn btn-primary">Mail Me!</a>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse collapse2"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse collapse2"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
                         </div>
                     </div>
                 </div>
             </div>
-
-        </div>
-
         </div>
     </section>
 </body>
