--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">FAQ</a>
+                  <a class="nav-link" href="./faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact Us</a>
