--- a/contact.html
+++ b/contact.html
@@ -91,12 +91,16 @@
                             <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
                             <h5 class="card-title">Manas Jha</h5>
                             <p class="card-text">Developer</p>
-                            <a href=""><img class="icon" src="./images/contact/github.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/linkedin.png"></a>
+                            <a href="https://github.com/ManasJhaMJ"><img class="icon"
+                                    src="./images/contact/github.png"></a>
+                            <a href="https://www.linkedin.com/in/notmanasjha/"><img class="icon"
+                                    src="./images/contact/linkedin.png"></a>
                             <br>
-                            <a href=""><img class="icon" src="./images/contact/twitter.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/instagram.png"></a>
-                            <br><br><a href="#" class="btn btn-primary">Mail Me!</a>
+                            <a href="https://twitter.com/ManasJhamj"><img class="icon"
+                                    src="./images/contact/twitter.png"></a>
+                            <a href="https://www.instagram.com/notmanasjha/"><img class="icon"
+                                    src="./images/contact/instagram.png"></a>
+                            <br><br><a href="mailto:jhamanas939@gmail.com" class="btn btn-primary">Mail Me!</a>
                         </div>
                     </div>
                 </div>
@@ -107,12 +111,16 @@
                             <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
                             <h5 class="card-title">Yash Srivastava</h5>
                             <p class="card-text">Designer</p>
-                            <a href=""><img class="icon" src="./images/contact/github.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/linkedin.png"></a>
+                            <a href="https://github.com/YS7Creates"><img class="icon"
+                                    src="./images/contact/github.png"></a>
+                            <a href="https://www.linkedin.com/in/yash-srivastava-3860bb236/"><img class="icon"
+                                    src="./images/contact/linkedin.png"></a>
                             <br>
-                            <a href=""><img class="icon" src="./images/contact/twitter.png"></a>
-                            <a href=""><img class="icon" src="./images/contact/instagram.png"></a>
-                            <br><br><a href="#" class="btn btn-primary">Mail Me!</a>
+                            <a href="https://twitter.com/ys7.creates"><img class="icon"
+                                    src="./images/contact/twitter.png"></a>
+                            <a href="https://www.instagram.com/ys7creates/"><img class="icon"
+                                    src="./images/contact/instagram.png"></a>
+                            <br><br><a href="mailto:ysyashmks@gmail.com" class="btn btn-primary">Mail Me!</a>
                         </div>
                     </div>
                 </div>
