--- a/faq.html
+++ b/faq.html
@@ -91,18 +91,16 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Accordion Item #1
+                            How E-nstruments is useful?
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse collapse2 show"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            E-nstruments helps you by letting you test instruments on our website and know more about it
+                            before actually buying any instrument.You dont have to go to any instrument store to test
+                            and try instruments. We are also going to add a marketplace soon where you can buy
+                            instruments directly from our website.
                         </div>
                     </div>
                 </div>
@@ -110,18 +108,15 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            Are new instruments going to be added?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse collapse2"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            We are working on our website everyday to improve it and adding instruments is an important
+                            task. We have already planned to add more instruments that we offer. We are planning to add
+                            instruments like bongo, bass-guitar, congo, sitar and more!
                         </div>
                     </div>
                 </div>
@@ -129,21 +124,65 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
+                            What will be in the upcoming marketplace?
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse collapse2"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            In this marketplace, users can try and test an instrument and then based on their choice
+                            select
+                            an instrument from our marketplace to buy. This will allow users to purchase an instrument
+                            directly from our website instead of searching for it somewhere else.
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Is there going to be light mode?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse collapse2"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Yes, we are planning for a light mode in our website as a feature. We want all user bases to
+                            be able to use our service so light mode will be added soon on our website as a feature.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                            What to do if sound not playing?
+                        </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse collapse2"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Turn up your volume. Check for any audio device your device maybe connected to. Reload the
+                            site. Test out all buttons. Try disabling adblocker. Check if you enable your browser to
+                            play sounds. Make sure you are able to click the buttons properly. Still not working?
+                            Contact us.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="video">
+        <div class="video">
+            <img class="eclipse" src="./images/drumset/Eclipse.png" />
+            <img class="eclipse2" src="./images/drumset/Eclipse2.png" />
+            <h1 class="big">W<strong class="small">hat's</strong>
+                N<strong class="small">ext</strong>?
+            </h1>
+            <div class="glass">
+                <p class="small2">~ A sneak peak into what's next 😉</p>
+                <video src="./video/video.mp4" controls autoplay loop muted width="400px" height="300px"></video>
+                <p class="small2">🌟 Stay tuned! 🙌🏻</p>
             </div>
         </div>
     </section>
