--- a/instruments/pan-flute.html
+++ b/instruments/pan-flute.html
@@ -58,10 +58,10 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">FAQ</a>
+                                    <a class="nav-link" href="../faq.html">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact Us</a>
+                                    <a class="nav-link" href="../contact.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
