change video to gif

--- a/faq.html
+++ b/faq.html
@@ -181,7 +181,8 @@
             </h1>
             <div class="glass">
                 <p class="small2">~ A sneak peak into what's next 😉</p>
-                <video src="./video/video.mp4" controls autoplay loop muted width="400px" height="300px"></video>
+                <!-- <video src="./video/video.mp4" controls autoplay loop muted width="400px" height="300px"></video> -->
+                <img class="gif" src="./video/video.gif">
                 <p class="small2">🌟 Stay tuned! 🙌🏻</p>
             </div>
         </div>
